kubernetes/kub/ingress/ingress.yaml
#here we deployed a simple web app using nginx ingress controller 
#first we instal ingress using the following command 
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml
# the we applied the manifest below
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: switch2mdock/weatherapp:26
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  #- host: *
  #here if we dont't specify the host field is gonna take its default value which is * and it mean match any host
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 80
    defaultBackend: # this one is used for the default backend
    service:
      name: default-service
      port:
        name: http

#############################################
#############################################
#############################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: switch2mdock/weatherapp:26
          ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-ingress
  namespace: testpf
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx
  defaultBackend:
    service:
      name: default-backend
      port:
        number: 80
  rules:
    - host: eu-pingadmin-uat-auchan-com.cloud.deloitte.fr
      http:
        paths: 
          - path: /pf-admin-api/v1/idp/spConnections/
            pathType: Prefix
            backend:
              service:
                name: <svc_name>
                port:
                  number: 80

          - path: /pf-admin-api/v1/oauth/clients/
            pathType: Prefix
            backend:
              service:
                name: <svc_name>
                port:
                  number: 80


#############################
###########################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /pf-admin-api/v1/idp/spConnections {
        return 200 "This is Path A";
      }
      location = /pf-admin-api/v1/oauth/clients {
        return 200 "This is Path B";
      }
      location / {
        return 415 "Unsupported Media Type";
      }
spec:
  #ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /pf-admin-api/v1/idp/spConnections/
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80

          - path: /pf-admin-api/v1/oauth/clients/
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
